Receiving DynamicMessage from Kafka